--- a/.gitignore
+++ b/.gitignore
@@ -143,6 +143,8 @@ _TeamCity*
 
 # DotCover is a Code Coverage Tool
 *.dotCover
+coverage/
+coverage.html
 
 # AxoCover is a Code Coverage Tool
 .axoCover/*
